(PC-36014)[PRO] fix: rename StocksThing css file and get rid of extra margin-botton on desktop

--- a/pro/src/components/IndividualOffer/StocksThing/StocksThing.module.scss
+++ b/pro/src/components/IndividualOffer/StocksThing/StocksThing.module.scss
@@ -49,4 +49,8 @@
   .field-layout-footer {
     min-height: rem.torem(32px);
   }
+
+  .button-actions {
+    margin-bottom: 0;
+  }
 }
